--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,15 +2,43 @@
   display: flex;
   justify-content: center;
   background-color: var(--color-black);
+  height: 225px;
+}
+
+@media screen and (width > 768px) {
+  .heroImageContainer {
+    height: 300px;
+  }
+}
+
+.heroBgImage img {
+  height: 100%;
+  object-fit: cover;
+}
+
+.logo {
+  width: 174px;
+  height: auto;
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+@media screen and (width > 768px) {
+  .logo {
+    top: 120px;
+  }
 }
 
 .main {
-  position: relative;
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
   width:  calc(100vw - 20px);
-  height: calc(100vh - 120px);
+  height: calc(max(100vh, 1000px));
   background-color: var(--background);
-  margin: 0 auto;
-  margin-top: -60px;
   outline: 1px solid var(--outline-color);
   outline-offset: -1px;
   border-radius: 6px;
@@ -19,6 +47,7 @@
 
 @media screen and (width > 768px) {
   .main {
+    top: 220px;
     width: calc(min(1280px, 100vw - 80px));
     height: calc(100vh - 260px);
   }
@@ -27,7 +56,8 @@
 .rankSection {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 120px 1fr 1fr;
+  grid-template-rows: 120px minmax(250px, auto) 1fr;
+  grid-row-gap: 2rem;
   grid-template-areas:
     "rankHeader"
     "rankFilters"
@@ -43,6 +73,7 @@
     grid-template-areas:
       "rankHeader rankHeader"
       "rankFilters rankTable";
+    grid-row-gap: 0.85rem;
     padding-top: 0;
   }
 }
