bug fixes - search and empty table

--- a/app/components/RankTable/rankTable.module.css
+++ b/app/components/RankTable/rankTable.module.css
@@ -39,7 +39,7 @@
     .tableHeader th:last-child {
         display: none;
     }
-    .tableRow td:last-child {
+    .tableRow td:last-child:not(.tableEmpty) {
         display: none;
     }
 }
