--- a/app/components/Loader/Loader.module.css
+++ b/app/components/Loader/Loader.module.css
@@ -1,5 +1,5 @@
 .loader {
-    background-color: var(--color-light-gray);
+    background-color: var(--color-secondary);
     position: relative;
     overflow: hidden;
 }
@@ -12,7 +12,7 @@
     bottom: 0;
     left: 0;
     transform: translateX(-100%);
-    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0.2) 20%, rgba(255, 255, 255, 0.5) 60%, rgba(255, 255, 255, 0));
+    background-image: linear-gradient(90deg, rgba(108, 114, 127, 0) 0, rgba(108, 114, 127, 0.2) 20%, rgba(108, 114, 127, 0.5) 60%, rgba(108, 114, 127, 0));
     animation: shimmer 2s infinite;
 }
 
