--- a/app/country/[code]/page.module.css
+++ b/app/country/[code]/page.module.css
@@ -1,10 +1,11 @@
+
 .main {
     position: relative;
     margin-top: -60px;
     left: 50%;
     transform: translateX(-50%);
     width:  100vw;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
     background-color: var(--background);
     outline: 1px solid var(--outline-color);
     border-radius: 6px;
@@ -16,4 +17,136 @@
         width: calc(min(800px, 100vw - 40px));
         outline-offset: -1px;
     }
+}
+
+.countryInfoContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+}
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.countryFlagContainer {
+    width: 250px;
+    height: 160px;
+    margin-top: -50px;
+    margin-bottom: 1.8rem;
+}
+
+.countryFlag {
+    width: auto;
+    height: auto;
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+    border-radius: 10px;
+    margin: 0 auto;
+}
+
+.countryName {
+    font-size: var(--font-size-heading);
+    font-weight: var(--font-weight-semibold);
+}
+
+.countryOfficialName {
+    font-size: var(--font-size-normal);
+}
+
+.metaInfoSection {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+@media screen and (width > 768px) {
+    .metaInfoSection {
+        gap: 2.5rem;
+    }
+}
+
+.metaInfoWrapper {
+    display: flex;
+    align-items: center;
+    background-color: var(--color-secondary);
+    border-radius: 8px;
+    padding: 0.35rem 0;
+}
+
+.metaInfoTitle {
+    font-size: var(--font-size-sm);
+    padding: 0.45rem 1rem;
+}
+
+.metaInfoValue {
+    padding: 0.45rem 1rem;
+    border-left: 1px solid var(--background);
+}
+
+.infoRow {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 1.2rem;
+    border-bottom: 1px solid var(--color-secondary);
+    font-size: var(--font-size-sm);
+}
+
+.infoRow:first-child {
+    border-top: 1px solid var(--color-secondary);
+}
+
+.borderFlagsSection {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1.2rem;
+}
+
+.neighbourFlagsContainer {
+    display: flex;
+    gap: 1.5rem;
+    overflow-x: auto;
+    scrollbar-width: thin;
+}
+
+.neighbourFlagsContainer > div {
+    height: 120px;
+}
+
+.mainImageLoader {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.textLoader {
+    width: 150px;
+    height: 1rem;
+    border-radius: 6px;
+}
+
+.textTitleLoader, .textSubTitleLoader {
+    height: 1.2rem;
+    border-radius: 6px;
+}
+
+.textSubTitleLoader {
+    width: 160px;
+    height: 1.2rem;
+}
+
+.textTitleLoader {
+    width: 120px;
+    height: 3rem;
+    margin-bottom: 10px;
+}
+
+.metaInfoLoader {
+    width: 180px;
+    height: 3rem;
+    border-radius: 8px;
 }
